# apps.core.preloaded.calculator

./: CMakeLists.txt  LICENSE  calculator.edc  org.tizen.calculator.desktop.in  org.tizen.calculator.manifest  org.tizen.calculator.rule  org.tizen.calculator.xml  project.config
debian/: changelog  control  org.tizen.calculator.install.in  rules
edc/: Inc.calculator.main.edc  Inc.calculator.pannel.lan.edc  Inc.calculator.pannel.por.edc  edc-macro.edc
include/: calc-expression.h  calc-main.h  calc-string.h  calc-view.h  calculator_parser.h
packaging/: calculator.spec  org.tizen.calculator.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  csv2po_v2  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  (+18 more)
src/: calc-expression.c  calc-main.c  calc-string.c  calc-view.c  calculator_edje.c  calculator_parser.c
src/decnumber/: decContext.c  decContext.h  decNumber.c  decNumber.h  decNumberLocal.h
theme/: CMakeLists.txt  LICENSE  calculator.edc  calculator.ini  calculator_theme.edc
theme/debian/: control  org.tizen.calculator.install.in  org.tizen.calculator.postinst  rules
theme/edc/: Inc.calculator.main.edc  Inc.calculator.pannel.lan.edc  Inc.calculator.pannel.por.edc  edc-macro.edc
theme/include/: calc-expression.h  calc-main.h  calc-string.h  calc-view.h  calculator_parser.h
theme/packaging/: org.tizen.calculator.spec
theme/po/: CMakeLists.txt  ar.po  ca.po  calculator.pot  cs.po  hi.po  hr.po  it_IT.po  ja_JP.po  ko_KR.po  ms.po  no.po  ro.po  sk.po  sl.po  th.po  tr_TR.po  zh_HK.po
theme/src/: calc-expression.c  calc-main.c  calc-string.c  calc-view.c  calculator_edje.c  calculator_parser.c
